--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
 		rel="stylesheet" />
-</head> 
+</head>
 
 <body>
 	<div class="container">
@@ -29,14 +29,14 @@
 				<div class="burger-menu__bar"></div>
 				<div class="burger-menu__bar"></div>
 			</label>
-			<input id="menu" class="burger-menu__checkbox" type="checkbox" >
+			<input id="menu" class="burger-menu__checkbox" type="checkbox">
 			<nav class="navigation">
 				<ul class="navigation__list">
 					<li><a href="#bio" class="navigation__link navigation__bio">Bio</a></li>
 					<li><a href="#skills" class="navigation__link navigation__skills">Skills</a></li>
-					<li><a href="#media" class="navigation__link navigation__media">Media</a></li>
+					<!-- <li><a href="#media" class="navigation__link navigation__media">Media</a></li> -->
 					<li><a href="#projects" class="navigation__link navigation__projects">Projects</a></li>
-					<li><a href="#my-clients" class="navigation__link navigation__my-clients">My Clients</a></li>
+					<!-- <li><a href="#my-clients" class="navigation__link navigation__my-clients">My Clients</a></li> -->
 					<li><a href="#contact" class="navigation__link navigation__contact">Contact</a></li>
 				</ul>
 			</nav>
@@ -50,23 +50,30 @@
 		<section class="bio section" id="bio">
 			<div class="bio-data">
 				<h1 class="bio__heading">
-					Hi There, I'M A Passionate Junior Frontend | Javascript | React
+					Hi There, I'M A Passionate Junior ReactJS | NextJS | MERN stack
 					Developer
 				</h1>
 				<p class="bio__objective">
-					My name is <span class="bio__name">Mohamed Abubakr</span>, I am a
-					passionate and driven Junior Frontend Developer specializing in
-					JavaScript and React, eager to contribute to innovative projects and
-					grow within a dynamic team. With a strong foundation in frontend
-					technologies and a proactive approach to learning, I am excited to
-					leverage my skills and enthusiasm to make meaningful contributions
-					in the field of web development.
+					My name is <span class="bio__name">Mohamed Abubakr</span>, I’m a dedicated and curious individual
+					with a deep passion for learning and personal growth. Transitioning into web development has been a
+					journey of self-discovery, discipline, and creativity. I find joy in solving problems, building
+					things from scratch, and continuously improving—not just in coding, but in all areas of life.
+
+					What drives me is the excitement of turning ideas into reality, the satisfaction of mastering new
+					skills, and the belief that it’s never too late to pursue a new path. I thrive when I'm challenged,
+					enjoy working both independently and within a team, and value clear communication, honesty, and
+					continuous feedback.
+
+					Outside of coding, I’m someone who values simplicity, focus, and meaningful work. I'm currently
+					working hard to grow as a developer and looking forward to opportunities where I can contribute,
+					learn, and evolve professionally.
 				</p>
 				<a href="#contact" class="bio__links say-hi-link">Say Hi</a>
-				<a href="./mohamedAbusreaResume.pdf" class="bio__links find-out-link">Download CV <span class="bio__arrow">↓</span></a>
+				<a href="https://drive.google.com/file/d/11wuFWDstzqb_kH1l5ZkiRGQaKaNPhlbx/view?usp=sharing" class="bio__links find-out-link">Download CV <span
+						class="bio__arrow">↓</span></a>
 			</div>
 			<div class="bio__pic--content">
-				<img src="images/IMG-20240518-WA0001~2.png" alt="image of mohamed abubakr" class="bio__pic" />
+				<img src="./images/IMG-20240518-WA0001~2.jpg" alt="image of mohamed abubakr" class="bio__pic" />
 			</div>
 		</section>
 
@@ -75,36 +82,52 @@
 			<ul class="skills__list">
 				<li class="skills__listItems">
 					<h2 class="skills__itemsHeading">HTML</h2>
-					<span class="skills__experience">2 years<span>
+					<!-- <span class="skills__experience">2 years<span> -->
 				</li>
 				<li class="skills__listItems">
 					<h2 class="skills__itemsHeading">CSS</h2>
-					<span class="skills__experience">2 years<span>
+					<!-- <span class="skills__experience">2 years<span> -->
+				</li>
+				<li class="skills__listItems">
+					<h2 class="skills__itemsHeading">Tailwind CSS</h2>
+					<!-- <span class="skills__experience">2 years<span> -->
 				</li>
 				<li class="skills__listItems">
 					<h2 class="skills__itemsHeading">Javascript</h2>
-					<span class="skills__experience">1 year</span>
+					<!-- <span class="skills__experience">1 year</span> -->
 				</li>
 				<li class="skills__listItems">
-					<h2 class="skills__itemsHeading">React</h2>
-					<span class="skills__experience">1 year</span>
+					<h2 class="skills__itemsHeading">ReactJS</h2>
+					<!-- <span class="skills__experience">1 year</span> -->
 				</li>
 				<li class="skills__listItems">
-					<h2 class="skills__itemsHeading">C#</h2>
-					<span class="skills__experience">2 years<span>
+					<h2 class="skills__itemsHeading">NextJS</h2>
+					<!-- <span class="skills__experience">1 year</span> -->
 				</li>
 				<li class="skills__listItems">
-					<h2 class="skills__itemsHeading">Python</h2>
-					<span class="skills__experience">1 year</span>
+					<h2 class="skills__itemsHeading">MongoDB</h2>
+					<!-- <span class="skills__experience">2 years<span> -->
+				</li>
+				<li class="skills__listItems">
+					<h2 class="skills__itemsHeading">ExpressJS</h2>
+					<!-- <span class="skills__experience">1 year</span> -->
+				</li>
+				<li class="skills__listItems">
+					<h2 class="skills__itemsHeading">NodeJS</h2>
+					<!-- <span class="skills__experience">1 year</span> -->
+				</li>
+				<li class="skills__listItems">
+					<h2 class="skills__itemsHeading">Redux Toolkit</h2>
+					<!-- <span class="skills__experience">1 year</span> -->
 				</li>
 			</ul>
 		</section>
 
-		<section id="media" class="media section">
+		<!-- <section id="media" class="media section">
 			<video class="media__video" controls muted poster="./images/thumbnail.jpg" preload="auto">
 				<source src="/video.mp4" type="video/mp4">
 			</video>
-		</section>
+		</section> -->
 
 		<section id="projects" class="projects section">
 			<h2 class="h2__heading">MY FEATURED <br> PROJECTS</h2>
@@ -151,7 +174,7 @@
 			</ul>
 		</section>
 
-		<section id="my-clients" class="my-clients section section-with-bg">
+		<!-- <section id="my-clients" class="my-clients section section-with-bg">
 			<h2 class="h2__heading">WHAT MY <br> CLIENTS SAY.</h2>
 			<div class="clients__opinions">
 				<div class="clients__wrapper">
@@ -172,7 +195,7 @@
 						initiatives on personal and team level, and driving them.</p>
 				</div>
 			</div>
-		</section>
+		</section> -->
 
 		<section id="contact" class="contact section">
 			<div>
@@ -200,22 +223,24 @@
 					<a href="#" class="contact__social">
 						<img src="./images/brand/facebook.svg" alt="facebook icon">
 					</a>
-					
+
 				</div>
 			</div>
 
-			<div class="contact__formContent">
+			<!-- <div class="contact__formContent">
 				<h2 class="h2__heading">LET'S WORK <br> TOGETHER</h2>
 
 				<form action="results.html">
 					<div class="contact__inputs">
 						<input type="text" class="contact__input" required name="fullName " placeholder="Full Name">
-						<input type="tel" class="contact__input" required name="tel" placeholder="Phone No." pattern="[0-9]+">
+						<input type="tel" class="contact__input" required name="tel" placeholder="Phone No."
+							pattern="[0-9]+">
 					</div>
-					<textarea class="contact__input contact__textarea" name="description" id="description" placeholder="Your Message" rows="1"></textarea>
+					<textarea class="contact__input contact__textarea" name="description" id="description"
+						placeholder="Your Message" rows="1"></textarea>
 					<input type="submit" class="contact__button" value="Send Message">
 				</form>
-			</div>
+			</div> -->
 		</section>
 
 		<footer class="footer">© 2024 by Mohamed Abubakr</footer>
