--- a/index.html
+++ b/index.html
@@ -205,24 +205,18 @@
 				</p>
 				<a href="mailto:gen2022eg@gmail.com" class="contact__email">gen2022eg@gmail.com</a>
 				<div class="contact__socials">
-					<a href="#" class="contact__social">
+					<a href="https://github.com/ganiny" class="contact__social">
 						<img src="./images/brand/github.svg" alt="github icon">
 					</a>
-					<a href="#" class="contact__social">
-						<img src="./images/brand/instagram.svg" alt="instagram icon">
-					</a>
-					<a href="#" class="contact__social">
+					<a href="https://www.linkedin.com/in/mohamed-abubakr-7225aa2b4" class="contact__social">
 						<img src="./images/brand/LinkedIn.svg" alt="LinkedIn icon">
 					</a>
-					<a href="#" class="contact__social">
-						<img src="./images/brand/twitter.svg" alt="twitter icon">
-					</a>
-					<a href="#" class="contact__social">
+					<!-- <a href="#" class="contact__social">
 						<img src="./images/brand/youtube.svg" alt="youtube icon">
-					</a>
-					<a href="#" class="contact__social">
+					</a> -->
+					<!-- <a href="#" class="contact__social">
 						<img src="./images/brand/facebook.svg" alt="facebook icon">
-					</a>
+					</a> -->
 
 				</div>
 			</div>
