add first project

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 					learn, and evolve professionally.
 				</p>
 				<a href="#contact" class="bio__links say-hi-link">Say Hi</a>
-				<a href="https://drive.google.com/file/d/11wuFWDstzqb_kH1l5ZkiRGQaKaNPhlbx/view?usp=sharing" class="bio__links find-out-link">Download CV <span
-						class="bio__arrow">↓</span></a>
+				<a href="https://drive.google.com/file/d/11wuFWDstzqb_kH1l5ZkiRGQaKaNPhlbx/view?usp=sharing"
+					class="bio__links find-out-link">Download CV <span class="bio__arrow">↓</span></a>
 			</div>
 			<div class="bio__pic--content">
 				<img src="./images/IMG-20240518-WA0001~2.jpg" alt="image of mohamed abubakr" class="bio__pic" />
@@ -125,7 +125,7 @@
 
 		<!-- <section id="media" class="media section">
 			<video class="media__video" controls muted poster="./images/thumbnail.jpg" preload="auto">
-				<source src="/video.mp4" type="video/mp4">
+				<source src="" type="video/mp4">
 			</video>
 		</section> -->
 
@@ -133,18 +133,19 @@
 			<h2 class="h2__heading">MY FEATURED <br> PROJECTS</h2>
 			<ul class="projects__list">
 				<li class="projects__listItems">
-					<img src="./images/project-1.jpg" alt="Quran Tab Extension" class="projects__itemImage">
+					<img src="./images/screenshot2025-05-07155859.png" alt="Around The World"
+						class="projects__itemImage">
 					<div class="projects__itemDiv">
-						<h2 class="projects__itemHeading">Quran Tab <br> Extension</h2>
-						<p class="projects__itemDescription">Quran Tab is an Islamic new tab page that will keep you
-							inspired by a
-							verse from the Quran every time you open a new tab that helps you achieve your "Khatma" and
-							keeps you
-							connected with the words of Allah.</p>
+						<h2 class="projects__itemHeading">Around <br> The World</h2>
+						<p class="projects__itemDescription">Around The World is an interactive app that showcases the
+							flags of countries from all around the globe. With a simple and user-friendly interface,
+							users can explore detailed information about each country, including its capital,
+							population, region, and more. Whether you're a geography enthusiast, a student, or just
+							curious about the world, this app offers an engaging way to learn about the nations of the
+							world—one flag at a time.</p>
 						<ul class="projects__linksList">
-							<li class="projects__linksItems"><a href="#" class="projects__links" target="_blank">Chrome
-									Link</a></li>
-							<li class="projects__linksItems"><a href="#" class="projects__links" target="_blank">-Edge
+							<li class="projects__linksItems"><a href="https://around-the-world-olive.vercel.app/" class="projects__links" target="_blank">App Link</a></li>
+							<li class="projects__linksItems"><a href="https://github.com/ganiny/ReactJS_around_the_world" class="projects__links" target="_blank">Github
 									Link</a></li>
 						</ul>
 					</div>
