--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 		<section id="projects" class="projects section">
 			<h2 class="h2__heading">MY FEATURED <br> PROJECTS</h2>
 			<ul class="projects__list">
-				<!-- <li class="projects__listItems">
+				<li class="projects__listItems">
 					<img src="./images/screenshot2025-05-07155859.png" alt="Around The World"
 						class="projects__itemImage">
 					<div class="projects__itemDiv">
@@ -149,7 +149,7 @@
 									Link</a></li>
 						</ul>
 					</div>
-				</li> -->
+				</li>
 				<li class="projects__listItems">
 					<div class="projects__itemDiv">
 						<h2 class="projects__itemHeading">Quran Station <br>
