--- a/index.html
+++ b/index.html
@@ -144,33 +144,34 @@
 							curious about the world, this app offers an engaging way to learn about the nations of the
 							world—one flag at a time.</p>
 						<ul class="projects__linksList">
-							<li class="projects__linksItems"><a href="https://around-the-world-olive.vercel.app/" class="projects__links" target="_blank">App Link</a></li>
-							<li class="projects__linksItems"><a href="https://github.com/ganiny/ReactJS_around_the_world" class="projects__links" target="_blank">Github
+							<li class="projects__linksItems"><a href="https://around-the-world-olive.vercel.app/"
+									class="projects__links" target="_blank">App Link</a></li>
+							<li class="projects__linksItems"><a
+									href="https://github.com/ganiny/ReactJS_around_the_world" class="projects__links"
+									target="_blank">Github
 									Link</a></li>
 						</ul>
 					</div>
 				</li>
 				<li class="projects__listItems">
 					<div class="projects__itemDiv">
-						<h2 class="projects__itemHeading">Quran Station <br>
-							Extension</h2>
-						<p class="projects__itemDescription">Small extension that gives you access to over 100 stations
-							to help you
-							listen to the Quran from your favorite reciters easily Quran-Station has over 100 stations
-							to help you
-							listen to the Quran from your favorite reciters in a quick and easy way.</p>
+						<h2 class="projects__itemHeading">Kanban <br>
+							Board</h2>
+						<p class="projects__itemDescription">Kanban Board is a task management app designed to help you
+							organize your projects visually and efficiently. Using the intuitive drag-and-drop
+							interface, you can create tasks, assign them to columns like "To Do," "In Progress," and
+							"Done," and track your workflow in real time. Whether you're managing personal goals, team
+							projects, or daily to-dos, Kanban Board makes staying organized simple and effective.</p>
 						<ul class="projects__linksList">
-							<li class="projects__linksItems"><a href="#" class="projects__links" target="_blank">Chrome
-									Link</a></li>
-							<li class="projects__linksItems"><a href="#" class="projects__links"
-									target="_blank">-Firefox Link</a>
-							</li>
-							<li class="projects__linksItems"><a href="#" class="projects__links" target="_blank">-Edge
-									Link</a></li>
+							<li class="projects__linksItems"><a href="https://react-js-kanban-board.vercel.app/"
+								class="projects__links" target="_blank">App Link</a></li>
+						<li class="projects__linksItems"><a
+								href="https://github.com/ganiny/ReactJS_Kanban_Board" class="projects__links"
+								target="_blank">Github
+								Link</a></li>
 						</ul>
 					</div>
-					<img src="./images/project-2.jpg" alt="Quran Station
-            Extension" class="projects__itemImage">
+					<img src="./images/Screenshot2025-05-07200036.png" alt="Kanban Board" class="projects__itemImage">
 				</li>
 			</ul>
 		</section>
