add blog app project

--- a/index.html
+++ b/index.html
@@ -164,14 +164,31 @@
 							projects, or daily to-dos, Kanban Board makes staying organized simple and effective.</p>
 						<ul class="projects__linksList">
 							<li class="projects__linksItems"><a href="https://react-js-kanban-board.vercel.app/"
-								class="projects__links" target="_blank">App Link</a></li>
-						<li class="projects__linksItems"><a
-								href="https://github.com/ganiny/ReactJS_Kanban_Board" class="projects__links"
-								target="_blank">Github
-								Link</a></li>
+									class="projects__links" target="_blank">App Link</a></li>
+							<li class="projects__linksItems"><a href="https://github.com/ganiny/ReactJS_Kanban_Board"
+									class="projects__links" target="_blank">Github
+									Link</a></li>
 						</ul>
 					</div>
 					<img src="./images/Screenshot2025-05-07200036.png" alt="Kanban Board" class="projects__itemImage">
+				</li>
+				<li class="projects__listItems">
+					<video controls src="./0509(3).mp4" class="projects__itemImage"></video>
+					<div class="projects__itemDiv">
+						<h2 class="projects__itemHeading">Blog App<br> (MERN stack)</h2>
+						<p class="projects__itemDescription">Blog App is a simple and powerful platform for sharing
+							ideas, stories, and insights. Users can create, edit, and publish blog posts with ease, and
+							browse content written by others. With features like categorization, search, and responsive
+							design, the app offers a smooth reading and writing experience across all devices. Whether
+							you're a casual writer or a passionate blogger, Blog App makes it easy to express yourself
+							and connect with readers.</p>
+						<ul class="projects__linksList">
+							<li class="projects__linksItems"><a
+									href="https://github.com/ganiny/ReactJS_around_the_world" class="projects__links"
+									target="_blank">Github
+									Link</a></li>
+						</ul>
+					</div>
 				</li>
 			</ul>
 		</section>
