--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 					<!-- <span class="skills__experience">2 years<span> -->
 				</li>
 				<li class="skills__listItems">
-					<h2 class="skills__itemsHeading">Tailwind CSS</h2>
+					<h2 class="skills__itemsHeading">Tailwind</h2>
 					<!-- <span class="skills__experience">2 years<span> -->
 				</li>
 				<li class="skills__listItems">
