--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<section class="bio section" id="bio">
 			<div class="bio-data">
 				<h1 class="bio__heading">
-					Hi There, I'M A Passionate ReactJS | NextJS
+					Hi There, I'M A Passionate ReactJS | NextJS Developer
 				</h1>
 				<p class="bio__objective">
 					My name is <span class="bio__name">Mohamed Abubakr</span>, I’m a dedicated and curious individual
