--- a/index.html
+++ b/index.html
@@ -104,7 +104,19 @@
 					<!-- <span class="skills__experience">1 year</span> -->
 				</li>
 				<li class="skills__listItems">
+					<h2 class="skills__itemsHeading">PostgreSQL</h2>
+					<!-- <span class="skills__experience">1 year</span> -->
+				</li>
+				<li class="skills__listItems">
+					<h2 class="skills__itemsHeading">Prisma</h2>
+					<!-- <span class="skills__experience">1 year</span> -->
+				</li>
+				<li class="skills__listItems">
 					<h2 class="skills__itemsHeading">MongoDB</h2>
+					<!-- <span class="skills__experience">2 years<span> -->
+				</li>
+				<li class="skills__listItems">
+					<h2 class="skills__itemsHeading">Mongoose</h2>
 					<!-- <span class="skills__experience">2 years<span> -->
 				</li>
 				<li class="skills__listItems">
