--- a/index.html
+++ b/index.html
@@ -96,11 +96,35 @@
 					<!-- <span class="skills__experience">1 year</span> -->
 				</li>
 				<li class="skills__listItems">
+					<h2 class="skills__itemsHeading">Typescript</h2>
+					<!-- <span class="skills__experience">1 year</span> -->
+				</li>
+				<li class="skills__listItems">
 					<h2 class="skills__itemsHeading">ReactJS</h2>
 					<!-- <span class="skills__experience">1 year</span> -->
 				</li>
 				<li class="skills__listItems">
 					<h2 class="skills__itemsHeading">NextJS</h2>
+					<!-- <span class="skills__experience">1 year</span> -->
+				</li>
+				<li class="skills__listItems">
+					<h2 class="skills__itemsHeading">Shadcn UI</h2>
+					<!-- <span class="skills__experience">1 year</span> -->
+				</li>
+				<li class="skills__listItems">
+					<h2 class="skills__itemsHeading">Zustand</h2>
+					<!-- <span class="skills__experience">1 year</span> -->
+				</li>
+				<li class="skills__listItems">
+					<h2 class="skills__itemsHeading">Tanstack Query</h2>
+					<!-- <span class="skills__experience">1 year</span> -->
+				</li>
+				<li class="skills__listItems">
+					<h2 class="skills__itemsHeading">React Hook Form</h2>
+					<!-- <span class="skills__experience">1 year</span> -->
+				</li>
+				<li class="skills__listItems">
+					<h2 class="skills__itemsHeading">Framer Motion</h2>
 					<!-- <span class="skills__experience">1 year</span> -->
 				</li>
 				<li class="skills__listItems">
@@ -134,11 +158,11 @@
 			</ul>
 		</section>
 
-		<!-- <section id="media" class="media section">
-			<video class="media__video" controls muted poster="./images/thumbnail.jpg" preload="auto">
-				<source src="" type="video/mp4">
+		<section id="media" class="media section">
+			<video class="media__video" controls muted poster="" preload="auto">
+				<source src="/1022.mp4" type="video/mp4">
 			</video>
-		</section> -->
+		</section>
 
 		<section id="projects" class="projects section">
 			<h2 class="h2__heading">MY FEATURED <br> PROJECTS</h2>
