add poster to video

--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
 		</section>
 
 		<section id="media" class="media section">
-			<video class="media__video" controls muted poster="" preload="auto">
-				<source src="/1022.mp4" type="video/mp4">
+			<video class="media__video" controls muted poster="./images/screenshot2025-10-23080802.png" preload="auto">
+				<source src="./1022.mp4" type="video/mp4">
 			</video>
 		</section>
 
